# Frameport

./: .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  lefthook.yml  lint.xml  renovate.json  settings.gradle.kts
.claude/: settings.json
.claude/agents/: android-test-runner.md  arch-layer-auditor.md  async-cancel-safety.md  coverage-reporter.md  golden-blesser.md  jni-bridge-verifier.md  kotlin-design-auditor.md  native-verifier.md  packet-smoke-debugger.md  perf-profiler.md  pr-reviewer.md  regression-detector.md  rust-api-auditor.md  rust-test-runner.md  unsafe-code-auditor.md
.claude/rules/: android-foreground-service-lifecycle.md  android-foreground-service-types.md  compose-preview.md  golden-bless-discipline.md  jni-error-mapping.md  llm-rust-prompts.md  privacy-local-first.md
.claude/scripts/: README.md  rust-postedit-check.sh  rust-stop-verify.sh  subagent-stop-audit-log.sh
.codex/agents/: android-test-runner.toml  arch-layer-auditor.toml  async-cancel-safety.toml  build-engineer.toml  code-mapper.toml  coverage-reporter.toml  devops-engineer.toml  docs-researcher.toml  golden-blesser.toml  jni-bridge-verifier.toml  kotlin-design-auditor.toml  kotlin-specialist.toml  legal-check.toml  mobile-developer.toml  native-verifier.toml  perf-profiler.toml  performance-engineer.toml  pr-reviewer.toml  regression-detector.toml  rust-api-auditor.toml  rust-engineer.toml  rust-test-runner.toml  security-auditor.toml  unsafe-code-auditor.toml
.codex/rules/: compose-preview.md  foreground-service-lifecycle.md  golden-bless-discipline.md  llm-rust-prompts.md  rust-toolchain-pin.md
.codex/skills/: cargo-workflows  compose  diagnostics-system  material-3  memory-model  play-store-screenshots  repo-task-board  rust-android-build  rust-android-jni  rust-async-internals  rust-debugging  rust-discipline  rust-lints  rust-performance  rust-sanitizers-miri  rust-security  rust-test-tools  rust-unsafe
.github/workflows/: cargo-deny.yml  ci.yml  miri.yml
app/: build.gradle.kts  proguard-rules.pro
camera/api/: build.gradle.kts
camera/bluetooth/: build.gradle.kts
camera/data/: build.gradle.kts
camera/diagnostics/: build.gradle.kts
camera/domain/: build.gradle.kts
camera/media/: build.gradle.kts
camera/usb/: build.gradle.kts
camera/wifi/: build.gradle.kts
core/common/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/logging/: build.gradle.kts
core/permissions/: build.gradle.kts
core/storage/: build.gradle.kts
core/testing/: build.gradle.kts
docs/: agent-tooling.md
docs/adr/: 0001-android-rust-boundary.md  0002-wifi-socket-fd-handoff.md  0003-ble-client-abstraction.md  0004-media-import-pipeline.md  0005-no-cloud-v1.md  0006-no-firmware-update-v1.md  (+1 more)
gradle/: libs.versions.toml
rust/fuji-rs/: Cargo.toml  deny.toml  rust-toolchain.toml
rust/fuji-rs/crates/fuji-ble-protocol/: Cargo.toml
rust/fuji-rs/crates/fuji-ble-protocol/src/: advertisement.rs  constants.rs  handoff.rs  lib.rs  pairing.rs  payloads.rs
rust/fuji-rs/crates/fuji-ble-protocol/tests/: integration_tests.rs
rust/fuji-rs/crates/fuji-ble-protocol/tests/fixtures/: README.md
rust/fuji-rs/crates/fuji-cli/: Cargo.toml
rust/fuji-rs/crates/fuji-cli/src/: main.rs
rust/fuji-rs/crates/fuji-core/: Cargo.toml
rust/fuji-rs/crates/fuji-core/src/: lib.rs
rust/fuji-rs/crates/fuji-diagnostics/: Cargo.toml
rust/fuji-rs/crates/fuji-diagnostics/src/: lib.rs
rust/fuji-rs/crates/fuji-ffi/: Cargo.toml
rust/fuji-rs/crates/fuji-ffi/src/: lib.rs
rust/fuji-rs/crates/fuji-liveview/: Cargo.toml
rust/fuji-rs/crates/fuji-liveview/src/: lib.rs
rust/fuji-rs/crates/fuji-liveview/tests/: alloc_shim.rs  error_paths.rs  golden_frame.rs
rust/fuji-rs/crates/fuji-ptp/: Cargo.toml
rust/fuji-rs/crates/fuji-ptp/fuzz/: Cargo.toml
rust/fuji-rs/crates/fuji-ptp/fuzz/fuzz_targets/: ptp_decode.rs
rust/fuji-rs/crates/fuji-ptp/src/: array.rs  constants.rs  error.rs  framing.rs  header.rs  lib.rs  object_info.rs  packet.rs  string.rs
rust/fuji-rs/crates/fuji-ptp/tests/: golden_roundtrip.rs  proptest_roundtrip.rs
rust/fuji-rs/crates/fuji-ptp/tests/golden/ptp/: README.md  cancel_transaction.hex  data_packet.hex  end_data.hex  event.hex  init_command_ack.hex  init_command_req.hex  init_event_ack.hex  init_event_req.hex  init_fail.hex  operation_request.hex  operation_response.hex  ping.hex  pong.hex  start_data.hex
rust/fuji-rs/crates/fuji-ptpip/: Cargo.toml
rust/fuji-rs/crates/fuji-ptpip/src/: event.rs  lib.rs  remote.rs
rust/fuji-rs/crates/fuji-sim/: Cargo.toml
rust/fuji-rs/crates/fuji-sim/src/: builder.rs  dispatch.rs  error.rs  lib.rs  server.rs
rust/fuji-rs/crates/fuji-sim/tests/: scenarios.rs
rust/fuji-rs/crates/fuji-transfer/: Cargo.toml
rust/fuji-rs/crates/fuji-transfer/src/: lib.rs
rust/fuji-rs/crates/fuji-transfer/tests/: integration.rs
rust/fuji-rs/crates/fuji-usb-ptp/: Cargo.toml
rust/fuji-rs/crates/fuji-usb-ptp/src/: lib.rs
rust/fuji-rs/crates/fuji-usb-ptp/tests/: fake_transport.rs
scripts/: install-hooks.sh  pre-commit  test-hook-dry-run.sh
(+300 files in other folders)
