[package]
name = "fuji-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fuji-core.workspace = true
fuji-liveview.workspace = true
jni.workspace = true
# tokio: net (TcpStream::from_raw_fd), rt (current-thread runtime for worker thread),
# io-util (AsyncReadExt), macros (tokio::main in tests), time (timeout on session close),
# sync (AtomicBool for stop flag — already using std::sync, kept for future Notify).
tokio = { workspace = true, features = ["net", "rt", "io-util", "macros", "time", "sync"] }
