[package]
name = "fuji-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fuji-core.workspace = true
fuji-ptp = { path = "../fuji-ptp" }
fuji-ptpip = { path = "../fuji-ptpip" }

[dev-dependencies]
fuji-sim = { path = "../fuji-sim" }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "sync", "io-util", "time"] }
libc = "0.2"
