[package]
name = "fuji-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fuji-core.workspace = true
fuji-ptp.workspace = true
fuji-ptpip.workspace = true

[dev-dependencies]
fuji-sim.workspace = true
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "sync", "io-util", "time"] }
libc.workspace = true
